# LazyFramework

./: .gitignore  build.sh  gui.py  lzfconsole  push.sh  pyproject.toml  setup.py
core/: module_runner.py
modules/exploit/huawei/: command_injection.py
modules/exploit/mikrotik/: smb_dos.py
modules/payloads/reverse/: reverse_tcp.py
widgets/: ai_assistant.py  module_tab.py  module_watcher.py  network_map.py  notif.py
widgets/modules/exploit/tplink/: archer_ax50_rce.py
widgets/modules/exploit/windows/smb/: eternalblue.py
widgets/themes/: matrix_green.qss
